--- a/photo-album/src/pages/Login/Login.css
+++ b/photo-album/src/pages/Login/Login.css
@@ -1,34 +1,19 @@
-.login {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: azure;
-  }
-  .login__container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #dcdcdc;
-    padding: 30px;
-  }
-  .login__textBox {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  .login__btn {
-    padding: 10px;
-    font-size: 18px;
-    margin-bottom: 10px;
-    border: none;
-    color: white;
-    background-color: black;
-  }
-  .login__google {
-    background-color: #4285f4;
-  }
-  .login div {
-    margin-top: 7px;
-  }
+.login-form {
+  max-width: 360px;
+  margin: 60px auto;
+  padding: 20px;
+}
+.login-form label {
+  display: block;
+  margin: 30px auto;
+}
+.login-form span {
+  display: block;
+  margin-bottom: 6px;
+}
+.login-form input {
+  padding: 8px 6px;
+  font-size: 1em;
+  color: #777;
+  width: 100%;
+}
