--- a/photo-album/src/pages/HomePage/HomePage.css
+++ b/photo-album/src/pages/HomePage/HomePage.css
@@ -1,8 +1,17 @@
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 200px;
+    width: 100%;
+    background-color: aqua;
+    color: brown;
+    font-weight: bold;
+}
 .homepage {
     display: flex;
     flex-direction: column;
     background-color: azure;
-    height: 100vh;
     justify-content: center;
     align-items: center;
 }
@@ -23,4 +32,8 @@
     width: 200px;
     height: 200px;
     background: cadetblue;
+}
+
+.photos {
+    width: 90%;
 }
