[Create array of names and show the data in the render]

--- a/photo-album/src/pages/HomePage/HomePage.css
+++ b/photo-album/src/pages/HomePage/HomePage.css
@@ -34,3 +34,8 @@
     background: cadetblue;
 }
 
+.container-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
