[Deploy is done, and new rules has been added on package.json] - [https://photoalbum-220c2.web.app/]

--- a/photo-album/src/pages/Pictures/Pictures.css
+++ b/photo-album/src/pages/Pictures/Pictures.css
@@ -1,3 +1,8 @@
 .pictures {
     margin: 20px;
 }
+.add-button {
+    background-image:'../../assets/add.png';
+    background-repeat:no-repeat;
+   background-position:left top;  padding-left:15px;
+}
