--- a/photo-album/src/components/NavBar/NavBar.css
+++ b/photo-album/src/components/NavBar/NavBar.css
@@ -24,3 +24,17 @@
     color: #333;
     text-decoration: none;
 }
+.btn {
+    background: none;
+    border: 2px solid #1f9751;
+    padding: 6px 12px;
+    border-radius: 4px;
+    color: #1f9751;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1em;
+  }
+  .btn:hover {
+    background: #1f9751;
+    color: #fff;
+  }
