--- a/photo-album/src/index.css
+++ b/photo-album/src/index.css
@@ -1,10 +1,38 @@
+html {
+  box-sizing: border-box;
+  /* convert 1rem to 10px */
+  font-size: 62.5%; 
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.6rem;
+  line-height: 2;
+}
+
+/*Globales*/
+h1, h2, h3 {
+  font-family: 'Playfair Display', serif;
+  margin: 0 0 5rem 0;
+}
+
+h1{
+  font-size: 5rem;
+}
+h2{
+  font-size: 4rem;
+}
+h3{
+  font-size: 3rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
 
 code {
@@ -16,17 +44,18 @@ ul {
   list-style-type: none;
 }
 
-.btn {
-  background: none;
-  border: 2px solid #1f9751;
-  padding: 6px 12px;
-  border-radius: 4px;
-  color: #1f9751;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 1em;
+/* Utilities */
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  background-color: red;
 }
-.btn:hover {
-  background: #1f9751;
-  color: #fff;
+
+.text-center {
+  text-align: center;
+}
+
+.no-margin-padding {
+  margin: 0;
+  padding: 0;
 }
