--- a/photo-album/src/components/Input/Input.css
+++ b/photo-album/src/components/Input/Input.css
@@ -28,8 +28,7 @@
     padding: 10px 20px;
     border-radius: 20px;
     position: relative;
-
-
+    margin-bottom: 20px;
 }
 
 .input:invalid+label {
