--- a/photo-album/src/pages/Login/Login.css
+++ b/photo-album/src/pages/Login/Login.css
@@ -25,7 +25,7 @@
   background: white;
   margin-left: 10%;
   margin-right: 10%;
-  margin-bottom: 100px;
+  margin-bottom: 140px;
   border-radius: 25px;
 
 
@@ -87,6 +87,7 @@
   justify-content: center;
   margin: 0px 15px 0px 25px;
   width: 80%;
+  align-items: center;
 }
 
 @media (min-width:768px) {
