--- a/photo-album/src/pages/Signup/Signup.css
+++ b/photo-album/src/pages/Signup/Signup.css
@@ -26,9 +26,8 @@
   margin-top: 10%;
   margin-left: 10%;
   margin-right: 10%;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   border-radius: 25px;
-
 }
 
 @media (min-width:768px) {
@@ -37,7 +36,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 500px;
+    height: 350px;
     margin-left: 20%;
     margin-right: 20%;
     border-radius: 20px;
@@ -84,6 +83,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 0px 15px 0px 25px;
   width: 80%;
 }
@@ -91,7 +91,7 @@
 @media (min-width:768px) {
   .signup-form {
     width: 50%;
-    height: 500px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
