--- a/photo-album/src/components/NavBar/NavBar.css
+++ b/photo-album/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     background: #effaf0;
-    padding: 20px 10px;
+    padding: 10px;
     box-sizing: border-box;
 }
 
@@ -10,6 +10,7 @@
     margin: 0 auto;
     max-width: 960px;
     align-items: center;
+    justify-content: space-between;
 }
 .title {
     margin-right: auto;
