--- a/photo-album/src/pages/HomePage/HomePage.css
+++ b/photo-album/src/pages/HomePage/HomePage.css
@@ -4,34 +4,43 @@
     align-items: center;
     min-height: 200px;
     width: 100%;
-    background-color: aqua;
-    color: brown;
     font-weight: bold;
 }
 .homepage {
     display: flex;
     flex-direction: column;
-    background-color: azure;
+
     justify-content: center;
     align-items: center;
 }
 
 .container {
-    background-color: bisque;
     display: flex;
     flex-wrap: wrap;
     height: 700px;
-    width: 400px;
+    width: 100%;
+}
+@media (min-width:768px) {
+    .container {
+        width: 400px;
+    }
 }
 
 .container-album {
+    background: lightgray;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 50%;
     height: 200px;
-    background: cadetblue;
+    cursor: pointer;
+    margin-top: 15px;
+}
+@media (min-width:768px) {
+    .container-album {
+        width: 200px;
+    }
 }
 
 .container-input {
