--- a/photo-album/src/pages/Pictures/Pictures.css
+++ b/photo-album/src/pages/Pictures/Pictures.css
@@ -1,6 +1,4 @@
-.pictures {
-
-}
+.pictures {}
 
 .container-load-images {
     display: flex;
@@ -10,6 +8,7 @@
     margin-top: 50px;
     margin-bottom: 30px;
 }
+
 @media (min-width:768px) {
     .container-load-images {
         flex-direction: row;
@@ -21,8 +20,30 @@
     background: #F4F5FF;
     padding: 10px;
 }
+
 @media (min-width:768px) {
-.images {
-    padding: 40px;
+    .images {
+        padding: 40px;
+    }
 }
+
+.react-photo-album--row {
+    flex-flow: column !important;
+}
+
+@media (min-width:768px) {
+    .react-photo-album--row {
+        flex-flow: row !important;
+    }
+}
+
+.react-photo-album--photo {
+    width: auto !important;
+    margin-bottom: 10px;
+}
+
+@media (min-width:768px) {
+    .react-photo-album--photo {
+        width: calc((100% - 5px) / 2) !important;
+    }
 }
