--- a/photo-album/src/pages/Signup/Signup.css
+++ b/photo-album/src/pages/Signup/Signup.css
@@ -26,6 +26,8 @@
   margin-right: 10%;
   margin-bottom: 140px;
   border-radius: 25px;
+  margin-top: 50px;
+    height: 485px;
 }
 
 @media (min-width:768px) {
