--- a/photo-album/src/components/NavBar/NavBar.css
+++ b/photo-album/src/components/NavBar/NavBar.css
@@ -27,15 +27,21 @@
 }
 .btn {
     background: none;
-    border: 2px solid #1f9751;
+    border: 2px solid #255BE3;
     padding: 6px 12px;
     border-radius: 4px;
-    color: #1f9751;
+    color: #255BE3;
     font-weight: bold;
     cursor: pointer;
     font-size: 1em;
+    margin-bottom: 5px;
+
   }
-  .btn:hover {
-    background: #1f9751;
-    color: #fff;
+  .btn:hover, .btn:focus, .link:focus-visible {
+    color: #0F1632;
+    border: 2px solid #0F1632;
+  }
+
+  .hideNav {
+    display: none;
   }
